@@ -243,6 +243,7 @@ public:
 		REASON_WRITE_OVERFLOW,
 		REASON_NO_BANDWIDTH,
 		REASON_INVALID_DESCRIPTION,
+		REASON_WRITE_TIMEOUT,
 		REASON_LAST,
 	};
 
